# CAL

./: .gitignore  Cargo.toml  README.md  flake.nix  package.json  schema.json  vite.config.js
cal-config/: Cargo.toml
cal-config/src/: cli.rs  colors.rs  config.rs  entries.rs  freedesktop.rs  icons.rs  lib.rs
cal-daemon/: Cargo.toml
cal-daemon/src/: lib.rs
cal-tauri/: Cargo.toml  tauri.conf.json
cal-tauri/capabilities/: default.json
cal-tauri/src/: lib.rs  main.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Entry.svelte  Image.svelte  SearchIcon.svelte
src/lib/: close.ts  command.ts  config.svelte.ts  config.ts  counts.ts  load.ts  utils.ts
src/routes/: +page.svelte
